--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:gravity="center">
 
     <Button
-        android:id="@+id/recordButton"
+        android:id="@+id/btn_grant_permission"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="녹화 시작" />
+        android:text="화면 캡처 권한 허용" />
 
 </LinearLayout>
